updated HTML with basic structure of webpage

--- a/index.html
+++ b/index.html
@@ -4,9 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Document</title>
+    <title>Malia's Portfolio</title>
 </head>
+
 <body>
+    <header>
+        <h1>Malia Cho</h1>
+        <nav>
+            <a href="#">About Me></a>
+            <a href="#">Contact Info></a>
+            <a href="#">GitHub</a>
+            <a href="#">Resume</a>
+        </nav>
+    </header>
+
+    <main>
+        <div>
+            <section>
+                <header>Most Recent Project</header>
+                <img src="http://via.placeholder.com/360x360" alt="Placeholder Image"/>
+                <p>Brief Description about project</p>
+            </section>
+
+            <section>
+                <header>Other Project</header>
+                <img src="http://via.placeholder.com/240x240" alt="placeholder image"/>
+            </section>
+
+            <section>
+                <header>Other Project</header>
+                <img src="http://via.placeholder.com/240x240" alt="placeholder image"/>
+            </section>
+
+            <section>
+                <header>Other Project</header>
+                <img src="http://via.placeholder.com/240x240" alt="placeholder image"/>
+            </section>
+
+            <section>
+                <header>Other Project</header>
+                <img src="http://via.placeholder.com/240x240" alt="placeholder image"/>
+            </section>
+        </div>
+    </main>
+<footer>
+    <h3> Malia Cho 2023</h3>
+</footer>
     
 </body>
 </html>
