--- a/index.html
+++ b/index.html
@@ -11,44 +11,47 @@
     <header>
         <h1>Malia Cho</h1>
         <nav>
-            <a href="#">About Me></a>
-            <a href="#">Contact Info></a>
+            <a href="#">About Me</a>
+            <a href="#">Contact Info</a>
             <a href="#">GitHub</a>
             <a href="#">Resume</a>
         </nav>
     </header>
 
     <main>
-        <div>
+        <div class="project">
             <section>
-                <header>Most Recent Project</header>
-                <img src="http://via.placeholder.com/360x360" alt="Placeholder Image"/>
+                <h2 id="recent-project">Most Recent Project</h2>
+                <img class="image" src="http://via.placeholder.com/700x240" alt="placeholder image"/>
                 <p>Brief Description about project</p>
             </section>
-
+        </div>
+        <div class="project">
             <section>
-                <header>Other Project</header>
-                <img src="http://via.placeholder.com/240x240" alt="placeholder image"/>
+                <h3>Other Project</h3>
+                <img src="http://via.placeholder.com/200x150" alt="placeholder image"/>
             </section>
-
+        <div class="project">
             <section>
-                <header>Other Project</header>
-                <img src="http://via.placeholder.com/240x240" alt="placeholder image"/>
+                <h3>Other Project</h3>
+                <img src="http://via.placeholder.com/200x150" alt="placeholder image"/>
             </section>
-
+        </div>
+        <div class="project">
             <section>
-                <header>Other Project</header>
-                <img src="http://via.placeholder.com/240x240" alt="placeholder image"/>
+                <h3>Other Project</h3>
+                <img src="http://via.placeholder.com/200x150" alt="placeholder image"/>
             </section>
-
+        </div>
+        <div class="project">
             <section>
-                <header>Other Project</header>
-                <img src="http://via.placeholder.com/240x240" alt="placeholder image"/>
+                <h3>Other Project</h3>
+                <img src="http://via.placeholder.com/200x150" alt="placeholder image"/>
             </section>
         </div>
     </main>
 <footer>
-    <h3> Malia Cho 2023</h3>
+    <h3> Made by Malia Cho 2023</h3>
 </footer>
     
 </body>
