--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="./assets/style.css">
     <title>Malia's Portfolio</title>
 </head>
@@ -20,19 +21,19 @@
 
     <main>
         <div class="project">
-            <section>
+            <section class="project">
                 <h2 id="recent-project">Most Recent Project</h2>
                 <img class="image" src="http://via.placeholder.com/700x240" alt="placeholder image"/>
                 <p>Brief Description about project</p>
             </section>
         </div>
         <div class="project">
-            <section>
+            <section class="project">
                 <h3>Other Project</h3>
                 <img src="http://via.placeholder.com/200x150" alt="placeholder image"/>
             </section>
         <div class="project">
-            <section>
+            <section class="project">
                 <h3>Other Project</h3>
                 <img src="http://via.placeholder.com/200x150" alt="placeholder image"/>
             </section>
