--- a/index.html
+++ b/index.html
@@ -1,59 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="./assets/style.css">
     <title>Malia's Portfolio</title>
 </head>
 
-<body>
-    <header>
+<body class="bg-white">
+    <header class="bg-primary">
         <h1>Malia Cho</h1>
         <nav>
             <a href="#">About Me</a>
             <a href="#">Contact Info</a>
-            <a href="#">GitHub</a>
+            <a href="https://github.com/maliacho" target="blank">GitHub</a>
             <a href="#">Resume</a>
         </nav>
     </header>
 
     <main>
         <div class="project">
-            <section class="project">
-                <h2 id="recent-project">Most Recent Project</h2>
-                <img class="image" src="http://via.placeholder.com/700x240" alt="placeholder image"/>
-                <p>Brief Description about project</p>
-            </section>
+            <div class="card mb-10 w-75 h-25">
+                <img src="./assets/Screenshot 2023-09-11 at 8.38.27 PM.png" class="card-img-top"
+                    alt="screenshot of Film Finder homepage">
+                <div class="card-body">
+                    <h5 class="card-title">Film Finder</h5>
+                    <p class="card-text">With Film Finder, you can quickly and effortlessly search for any movie you
+                        have in mind. We provide you with all the essential information you need to make an informed
+                        decision.</p>
+                    <a href="https://maliacho.github.io/film-finder/?#" target="blank" class="card-text"><small class="text-body-secondary link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Click Here</small></a>
+                </div>
+            </div>
         </div>
-        <div class="project">
-            <section class="project">
-                <h3>Other Project</h3>
-                <img src="http://via.placeholder.com/200x150" alt="placeholder image"/>
-            </section>
-        <div class="project">
-            <section class="project">
-                <h3>Other Project</h3>
-                <img src="http://via.placeholder.com/200x150" alt="placeholder image"/>
-            </section>
-        </div>
-        <div class="project">
-            <section>
-                <h3>Other Project</h3>
-                <img src="http://via.placeholder.com/200x150" alt="placeholder image"/>
-            </section>
-        </div>
-        <div class="project">
-            <section>
-                <h3>Other Project</h3>
-                <img src="http://via.placeholder.com/200x150" alt="placeholder image"/>
-            </section>
+        <div class="row row-cols-1 row-cols-md-2 g-4 m-5">
+            <div class="col">
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="awesome image coming soon">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="awesome image coming soon">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="awesome image coming soon">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                            additional content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="awesome image coming soon">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
-<footer>
-    <h3> Made by Malia Cho 2023</h3>
-</footer>
-    
+    <footer class="bg-secondary">
+        <h3 class="text-white"> Made by Malia Cho 2023</h3>
+    </footer>
+
 </body>
+
 </html>
