added Project 2 to portfolio. need to format clickable link, got messed up in the addition'

--- a/index.html
+++ b/index.html
@@ -13,37 +13,58 @@
 
 <body class="bg-white">
     <header class="bg-primary">
-        <h1>Malia Cho</h1>
-        <nav>
-            <a href="#">About Me</a>
-            <a href="#">Contact Info</a>
-            <a href="https://github.com/maliacho" target="blank">GitHub</a>
-            <a href="#">Resume</a>
+        <nav class="navbar navbar-expand-lg fw-bold">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link text-light link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"
+                            aria-current="page" href="https://maliacho.github.io/portfolio-demo/">Home</a>
+                        <a class="nav-link text-light link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"
+                            href="https://github.com/maliacho" target="blank">GitHub</a>
+                        <a class="nav-link text-light link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"
+                            href="#">Contact Me</a>
+                        <a class="nav-link text-light link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"
+                            href="#">Resume</a>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
 
     <main>
         <div class="project">
-            <div class="card mb-10 w-75 h-25">
-                <img src="./assets/Screenshot 2023-09-11 at 8.38.27 PM.png" class="card-img-top"
-                    alt="screenshot of Film Finder homepage">
+            <div class="card rounded mb-10 w-75 h-25">
+                <img src="./assets/TechView.png" class="card-img-top" alt="screenshot of ticket home page">
                 <div class="card-body">
-                    <h5 class="card-title">Film Finder</h5>
-                    <p class="card-text">With Film Finder, you can quickly and effortlessly search for any movie you
-                        have in mind. We provide you with all the essential information you need to make an informed
-                        decision.</p>
-                    <a href="https://maliacho.github.io/film-finder/?#" target="blank" class="card-text"><small class="text-body-secondary link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Click Here</small></a>
+                    <h5 class="card-title">IT Help Desk</h5>
+                    <p class="card-text">This application is designed for employees within a company to be able to
+                        submit a ticket for help from the IT department.</p>
+                    <a href="https://murmuring-chamber-70429-75790581b652.herokuapp.com/" target="blank"
+                        class="card-text"><small
+                            class="text-black link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Click
+                            Here</small></a>
                 </div>
             </div>
         </div>
         <div class="row row-cols-1 row-cols-md-2 g-4 m-5">
             <div class="col">
-                <div class="card">
-                    <img src="..." class="card-img-top" alt="awesome image coming soon">
+                <div class="card rounded">
+                    <img src="./assets/Screenshot 2023-09-11 at 8.38.27 PM.png" class="card-img-top"
+                        alt="screenshot of Film Finder homepage">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">Film Finder</h5>
+                        <p class="card-text">With Film Finder, you can quickly and effortlessly search for any movie you
+                            have in mind. We provide you with all the essential information you need to make an informed
+                            decision.</p>
+                        <a href="https://maliacho.github.io/film-finder/?#" target="blank" class="card-text"><small
+                                class="text-body-secondary link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Click
+                                Here</small></a>
                     </div>
                 </div>
             </div>
